# cmake-practice

./: .gitattributes  .gitignore  BuildConfig.bat  README.md  TASK.md
T1/: main.cpp
T10/: CMakeLists.txt
T10/build-scripts/: build-for-nmake.bat  build-for-vs2010.bat
T11/: CMakeLists.txt  build.bat
T11/math/: CMakeLists.txt
T13/: CMakeLists.txt
T14/: build.bat
T15/: CMakeLists.txt  build.bat  export-style-diff.vsd  exports.bat
T15/build-scripts/: build-for-cdecl-c.bat  build-for-cdecl.bat  build-for-fastcall-c.bat  build-for-fastcall.bat  build-for-stdcall-c.bat  build-for-stdcall.bat  style-for-cdecl-c.bat  style-for-cdecl.bat  style-for-fastcall-c.bat  style-for-fastcall.bat  style-for-stdcall-c.bat  style-for-stdcall.bat
T15/build-scripts/defscripts/: style-for-cdecl-c.bat  style-for-cdecl.bat  style-for-fastcall-c.bat  style-for-fastcall.bat  style-for-stdcall-c.bat  style-for-stdcall.bat
T15/build-scripts/subscripts/: libhello-export-style.bat  src-cmakelists-generate.bat
T15/demo/: Invoker.sln
T15/demo/CSharp/: ProxyDLD.cs
T15/demo/CSharp/Properties/: AssemblyInfo.cs
T15/include/: dllexport.h  libhello.def  libhello.h.in
T15/src/: CMakeLists-generate.bat  CMakeLists.tmpl
T16/: build.bat
T16/lib/: libhello.lib
T16/src/: CMakeLists.txt  main.cpp
T17/: CMakeLists.txt  build-for-unix-make.bat  build-for-vs2010.bat  build.bat
T17/include/: libhello.h
T18/: CMakeLists.txt  build-for-unix-make.bat  build-for-vs2010.bat  build.bat
T18/cmake/: vInstallCpack.cmake
T18/src/: CMakeLists.txt
T2/: CMakeLists.txt  build.bat  main.cpp
T3/math/: MathFunctions.h
T5/: build.bat
T7/: CMakeLists.txt  build.bat
T7/util/include/: hello.h
T7/util/src/: CMakeLists.txt
T8/: CMakeLists.txt
T8/util/: CMakeLists.txt
T8/util/src/: CMakeLists.txt
T8/util/src/bye/: CMakeLists.txt
T8/util/src/hello/: CMakeLists.txt  hello.cpp
T9/: CMakeLists -1.txt
T9/math/: MathFunctions.cpp
basic/: BuildConfig.bat  README.md
basic/T01/: CMakeLists.txt  build_vs.bat
basic/T02/: build_vs.bat
basic/T03/: CMakeLists.txt
basic/T04/: build.bat  build_vs.bat
basic/T04/math/: CMakeLists.txt  MathFunctions.cpp
basic/T05/: CMakeLists.txt  build_vs.bat
basic/T05/math/: CMakeLists.txt  MathFunctions.h
basic/T06/: CMakeLists.txt  build_vs.bat  main.cpp
basic/T06/math/include/: MathFunctions.h
basic/T07/util/include/: bye.h
basic/T07/util/src/: bye.cpp
basic/T08/: build_vs.bat  main.cpp
basic/T08/math/lib/: MathFunctions.lib
basic/T09/: CMakeLists.txt  build.bat  build_vs.bat  main.cpp
basic/T10/: main.cpp
basic/T10/build-scripts/: build-for-jom.bat  build-for-mingw32-make.bat  build-for-unix-make.bat  build_jom.bat  build_mingw.bat  build_mingw32.bat  build_nmake.bat  build_unix.sh  build_vs.bat
basic/T11/: build_mingw.bat  main.cpp
basic/T12/: CMakeLists.txt  build.bat  build_mingw.bat
basic/T13/: main.cpp
basic/T13/math/: CMakeLists.txt
basic/T14/: CMakeLists.txt  build_vs.bat  config.h.in  main.cpp
basic/T15/: .gitignore  export-style-diff.md  exports.bat
basic/T15/build-scripts/: style-for-cdecl.bat  style-for-fastcall-c.bat  style-for-stdcall-c.bat
basic/T15/build-scripts/defscripts/: style-for-cdecl-c.bat  style-for-fastcall-c.bat
basic/T15/build-scripts/subscripts/: libhello-build.bat
basic/T15/demo/: .gitignore
basic/T15/demo/C++/: C++.vcxproj  main.cpp
basic/T15/demo/CSharp/: CSharp.csproj  Program.cs
basic/T15/include/: dllexport.h  libhello.h.in
basic/T16/: CMakeLists.txt  build_vs.bat
basic/T16/cmake/: FindHELLO.cmake
basic/T16/lib/: dllexport.h
basic/T16/src/: CMakeLists.txt
basic/T17/: CMakeLists.txt  build_mingw.bat  build_mingw32.bat  build_vs.bat
basic/T17/cmake/: vInstallCpack.cmake
basic/T18/: .gitignore  CMakeLists.txt  build_mingw.bat  build_mingw32.bat  build_unix.sh  build_vs.bat  main.cpp
basic/T18/cmake/: vInstallCpack.cmake
basic/T18/include/: README.md  dllexport.h  hello.h  libhello.h  libraryexport.h  person.h
basic/T18/src/: CMakeLists.txt  hello.cpp  libhello.cpp  person.cpp
qt/: BuildConfig.bat  CMakeLists.txt  README.md  build_mingw.bat  build_unix.sh  build_vs.bat  qm翻译文件加载说明.md
qt/cmake/: bulk_get_filename_component.cmake  qt.cmake
qt/src/: CMakeLists.txt  login.cpp  login.h  login.ui  main.cpp
qt/src/config/: CMakeLists.txt  usermanager.cpp  usermanager.h
qt/src/translations/: cmake_qt_en_US.ts  cmake_qt_zh_CN.ts
qt/src/users/: CMakeLists.txt  adduser.cpp  adduser.h  adduser.ui  modifyuser.cpp  modifyuser.h  modifyuser.ui
qt/src/utils/: CMakeLists.txt  configsaver.cpp  configsaver.h  namingrules.cpp  namingrules.h
qt/src/view/: login.cpp  login.h  login.ui  mainwindow.ui
qt/tests/: CMakeLists.txt
qt/tests/config/: CMakeLists.txt  tst_usermanager.cpp
qt/tests/resources/: CMakeLists.txt  tst_images_qrc.cpp  tst_translations_qrc.cpp
qt/tests/utils/: CMakeLists.txt  tst_namingrules.cpp
